rustfs/src/admin/snapshots/rustfs__admin__plugin_contract__tests__plugin_instance_contract.snap
---
source: rustfs/src/admin/plugin_contract.rs
expression: value
---
{
  "diagnostic_counts": [
    {
      "code": "not_loaded_in_runtime",
      "count": 1
    }
  ],
  "instances": [
    {
      "account_id": "primary",
      "config": {
        "enable": "on",
        "endpoint": "https://example.com/hook"
      },
      "diagnostic_codes": [
        "not_loaded_in_runtime"
      ],
      "domain": "notify",
      "enabled": true,
      "health_reason": "not_loaded_in_runtime",
      "health_state": "offline",
      "id": "builtin:webhook:notify:primary",
      "plugin_id": "builtin:webhook",
      "service": "webhook",
      "source": "config",
      "status": "offline",
      "subsystem": "notify_webhook"
    }
  ],
  "next_marker": null,
  "truncated": false
}
